refactored. added And parser.